samples/_failures_safe/1761359615_d44870_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef321bff.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_ef321bff.c:168:5: error: expected identifier at end of input
  168 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_ef321bff.c:168:5: error: expected declaration or statement at end of input
